--- a/views/index.pug
+++ b/views/index.pug
@@ -3,22 +3,8 @@ extends layout
 block content
   .row.service-container
     .col-lg-12.service-header
-      .row.top-nav.navbar-fixed-top
-        .container
-          a.top-nav--logo-link(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/')
-            h3.heading.left
-              | IBM
-              span.top-nav--logo-wdc  Watson Developer Cloud
-          nav.top-nav--nav
-            li.top-nav--nav-item
-              a(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/services-catalog.html') Services
-            li.top-nav--nav-item
-              a(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/') Docs
-            li.top-nav--nav-item
-              a(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/gallery.html') App Gallery
-            li.top-nav--nav-item
-              a(href='http://developer.ibm.com/watson/') Community
       .row.header
+        //include nav
         .container
           .avatar.img-container.col-lg-2.col-md-2.col-sm-2.hidden-xs
             img.service-icon(src='/images/app.png')
@@ -26,14 +12,8 @@ block content
             h1.service-title(style='font-size:50px;') Insanity Insights
             p
               | Looking for similarities between local weather and political sentiment. Because this election is both pathetic and frought with fallacy.
-            .resource
-              img.link-icon(src='/images/link.svg')
-              strong Resources:
-            .resource-item-container
-              a.resource-item(href='https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/personality-insights/api') API Reference
-              a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/personality-insights/') Documentation
-              a.resource-item(href='https://github.com/watson-developer-cloud/personality-insights-nodejs') Fork on Github
-              a.resource-item(href='http://bluemix.net/deploy?repository=https://github.com/watson-developer-cloud/personality-insights-nodejs.git') Fork and Deploy on Bluemix
+  a(href="https://github.com/ananthamapod")
+    img(style="position: absolute; top: 0; right: 0; border: 0;", src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67", alt="Fork me on GitHub", data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png")
   .container
     .row
       .col-lg-6.col-md-12.col-xs-12
