getting rid of some extra headings

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ block content
   .container
     .row
       .col-lg-6.col-md-12.col-xs-12
-        h2 Input Text
+        h2 Twitter text
         .well
           .form-group.row
             .col-lg-12.col-xs-12(style='padding:0px;')
@@ -64,12 +64,12 @@ block content
             img.weather-icon
 
       .col-lg-6.col-md-12.col-xs-12
-        h2 Input Text
+        h2 Map
         .well
           #map(style="height: 400px; width: 400px")
 
       .col-lg-6.col-md-12.col-xs-12
-        h2 Input Text
+        h2 Weather
         p
           | We need a minimum of 3500 words and ideally 6000 words or more to compute statistically significant results. See
           a(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/personality-insights/science.shtml')  the science behind the service
